# practice-fastapi

./: .gitignore  README.md  pyproject.toml
api/: async_1.py  async_2.py  get_data.py  main.py  post.py  req.py  sqlalchemy_example.db  sqlalchemy_insert.py  test_sqlalchemy1.py  test_sqlalchemy2.py  tutorial.py
api/database/: sqlalchemy_example.db
api/pydantic_test/: BaseSettings_test.py  README.md  pydantic_example.py  pydantic_test_1.py  pydantic_test_2.py  tempCodeRunnerFile.py
database/: README.md  sqlalchemy_declarative.py
study/async/: test_aiohttp.py
study/chatBot/: main.py
study/database/: get_data.py  sqlalchemy_declarative.py  sqlalchemy_example.db
study/database1/: apis.py  sqlalchemy_declarative.py  sqlalchemy_example.db
study/database2/: main.py  model.py
study/openAi/: functionCalling.py  main.py
study/pydantic_test/: pydantic_test_1.py
test/api/: README.md  post.py
test/database/: get_data.py
test/pydantic_test/: pydantic-fastapi.py  pydantic_test_2.py
